# lmpc

./: .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  skills-lock.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py
apps/api/scripts/: seed_admin.py
apps/api/src/: config.py  db.py  main.py  redis_client.py
apps/api/src/auth/: deps.py  utils.py
apps/api/src/models/: __init__.py  admin.py  cache.py  run.py  worker.py
apps/api/src/routers/: auth.py  health.py  internal.py  models.py  runs.py
apps/api/src/schemas/: runs.py  workers.py
apps/api/src/services/: queue.py  sse.py
apps/api/tests/: test_health.py
apps/web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml
apps/web/src/app/: layout.tsx
apps/web/src/app/(public)/: page.tsx
apps/web/src/components/: Leaderboard.tsx  MetricCharts.tsx  MetricTiles.tsx  RunForm.tsx  StepsTimeline.tsx
apps/web/src/hooks/: useRunStream.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/: config.py  main.py  runner.py
apps/worker/src/metrics/: publisher.py
apps/worker/src/providers/: base.py  ollama.py  sglang.py  stub.py  tgi.py  vllm.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_timescale.py
backend/app/: main.py
backend/app/api/v1/: catalog.py  configs.py  runs.py  workers.py
backend/app/core/: config.py  db.py  deps.py  logging.py  security.py
backend/app/models/: __init__.py  audit_log.py  model.py  platform.py  prompt_set.py  run.py  run_config.py  worker.py
backend/app/schemas/: catalog.py  configs.py  runs.py  workers.py
backend/app/services/: janitor.py  queue.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_queue.py
db/: schema.dbml
docs/: DB_SCHEMA.txt  QUEUE_SCHEMA.txt  SCAFFOLD.md  SPECS.md
docs/superpowers/plans/: 2026-04-24-llm-bench-scaffold.md
docs/superpowers/specs/: 2026-04-24-llm-bench-scaffold-design.md  2026-05-06-lmpc-phases-1-3-design.md  2026-05-06-lmpc-phases-4-7-design.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthModal.tsx  StatusBadge.tsx
frontend/src/components/charts/: CompareChart.tsx  LatencyChart.tsx  ResourceChart.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: ComparePage.tsx  NewRunPage.tsx  RunDetailPanel.tsx  RunsPage.tsx  WorkersPage.tsx
lmpc/: __init__.py
lmpc/core/: base.py  run.py
scripts/: dev_reset.sh  seed_admin.py
worker/: Dockerfile  pyproject.toml
worker/lmpc_worker/: client.py  config.py  docker_runner.py  load_generator.py  main.py  metric_collector.py  poller.py  registration.py
worker/lmpc_worker/adapters/: __init__.py  base.py  lmstudio.py  mock.py  ollama.py  openai_compat.py  sglang.py  stub.py  tgi.py  triton.py  vllm.py
worker/tests/: test_registration.py  test_stub_adapter.py
(+3 files in other folders)
