[project]
name = "lmpc"
version = "0.1.0"
description = "Language Model Plarform Comparison"
authors = [
    {name = "Minh Doan",email = "quangminh57dng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "locust (>=2.43.1,<3.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "datasets (>=4.5.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
