[project]
name = "lmpc-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "psutil>=6.0.0",
    "numpy>=1.26.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
lmpc-worker = "lmpc_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lmpc_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
